--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -28,13 +28,13 @@
             <img src="images/logo.jpg" alt="Rafting Site Logo">
             <h2>Style Guide</h2>
             <h3>Color Palette</h3>
-            <p><ul id="special">
+            <p id="special">
                 <li>Primary Color: Bright Orange #ff9f1c</li>
                 <li>Secondary Color: Black #000000</li>
                 <li>Accent1 Color: Light Navy Blue #000080</li>
                 <li>Accent2 Color: Bright Cyan #2ec4b6</li>
                 <li>Palette URL: <a href="https://coolors.co/palette/ff9f1c-ffbf69-ffffff-cbf3f0-2ec4b6" target="_blank">https://coolors.co/palette/ff9f1c-ffbf69-ffffff-cbf3f0-2ec4b6</a></li>
-        </ul></p>
+            </p>
             <h3>Typography</h3>
             <h4>Headings Example Font</h4>
             <h4>Normal Text/Paragraph Example Font</h4>
@@ -58,3 +58,4 @@
             <p>© 2024 ✨Rafting Site Document ✨ Israel Mobote ✨ WDD 130✨</p>
         </footer>
     </body>
+</html>
