this is my recent codes edit on january 2 2024

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,61 +1,73 @@
-
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Rafting Site Plan | Israel Mobote</title>
-        <meta name="description" content="The rafting site plan includes the site purpose, the target audience, branding information and the style guide for the course website project">
-        <meta name="author" content="Israel Mobote">
-        <link rel="stylesheet" href="styles/site-plan-rafting.css">
-    </head>
-    <body>
-        <header>
-            <h1>Rafting Site Plan</h1>
-            <div>Israel Mobote</div>
-        </header>
-        <main>
-            <h2>Overview</h2>
-            <h3>Purpose</h3>
-            <p> This Website is designed to help Individuals and Families access information about our range of services, know more about what we do and contact our help lines for more customized information about our services </p>
-            <h3>Audience</h3>
-            <p>Who are the target customers? Families and individuals of all ages looking to ease themselves from their busy schedules with an adventuristic activity on water
-                What do they want? Fun, Adventure and Relaxation
-                How will my audience usually access my site? The target audience should be able to access the Rafting Site from mobile devices which include Phones, Tablets, Laptops and also from Desktop Computers>
-            </p>
-            <h2>Branding</h2>
-            <h3>Website Logo</h3>
-            <img src="images/logo.jpg" alt="Rafting Site Logo">
-            <h2>Style Guide</h2>
-            <h3>Color Palette</h3>
-            <p>
-                <ul id="special"><li>Primary Color: Bright Orange #ff9f1c</li>
-                    <li>Secondary Color: Black #000000</li>
-                    <li>Accent1 Color: Light Navy Blue #000080</li>
-                    <li>Accent2 Color: Bright Cyan #2ec4b6</li>
-                    <li>Palette URL: <a href="https://coolors.co/palette/ff9f1c-ffbf69-ffffff-cbf3f0-2ec4b6" target="_blank">https://coolors.co/palette/ff9f1c-ffbf69-ffffff-cbf3f0-2ec4b6</a></li></ul>
-            </p>
-            <h3>Typography</h3>
-            <h4>Headings Example Font</h4>
-            <h4>Normal Text/Paragraph Example Font</h4>
-            <p></p>
-            <h4>Colored Callout Example Font</h4>
-            <p></p>
-            <h3>Navigation</h3>
-            <nav>
-                <a href="#">Home</a>
-                <a href="#">About Us</a>
-                <a href="#">Trips</a>
-                <a href="#">Contact Us</a>
-            </nav> 
-            <h2>Wire Frames</h2>
-            <h3>Home Page Wireframe</h3>
-            <img src="https://byui-cse.github.io/wdd130--ww--course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
-            <h3>About Us Page Wireframe</h3>
-            <img src="https://byui-cse.github.io/wdd130--ww--course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
-        </main>
-        <footer>
-            <p>© 2024 ✨Rafting Site Document ✨ Israel Mobote ✨ WDD 130✨</p>
-        </footer>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Rafting Site Plan | Israel Mobote</title>
+    <meta name="description"
+        content="The rafting site plan includes the site purpose, the target audience, branding information and the style guide for the course website project">
+    <meta name="author" content="Israel Mobote">
+    <link rel="stylesheet" href="styles/site-plan-rafting.css">
+</head>
+
+<body>
+    <header>
+        <h1>Rafting Site Plan</h1>
+        <div>Israel Mobote</div>
+    </header>
+    <main>
+        <h2>Overview</h2>
+        <h3>Purpose</h3>
+        <p> This Website is designed to help Individuals and Families access information about our range of services,
+            know more about what we do and contact our help lines for more customized information about our services
+        </p>
+        <h3>Audience</h3>
+        <p>Who are the target customers? Families and individuals of all ages looking to ease themselves from their busy
+            schedules with an adventuristic activity on water
+            What do they want? Fun, Adventure and Relaxation
+            How will my audience usually access my site? The target audience should be able to access the Rafting Site
+            from mobile devices which include Phones, Tablets, Laptops and also from Desktop Computers>
+        </p>
+        <h2>Branding</h2>
+        <h3>Website Logo</h3>
+        <img src="images/logo.jpg" alt="Rafting Site Logo">
+        <h2>Style Guide</h2>
+        <h3>Color Palette</h3>
+        <p>
+        <ul id="special">
+            <li>Primary Color: Bright Orange #ff9f1c</li>
+            <li>Secondary Color: Black #000000</li>
+            <li>Accent1 Color: Light Navy Blue #000080</li>
+            <li>Accent2 Color: Bright Cyan #2ec4b6</li>
+            <li>Palette URL: <a href="https://coolors.co/palette/ff9f1c-ffbf69-ffffff-cbf3f0-2ec4b6"
+                    target="_blank">https://coolors.co/palette/ff9f1c-ffbf69-ffffff-cbf3f0-2ec4b6</a></li>
+        </ul>
+        </p>
+        <h3>Typography</h3>
+        <h4>Headings Example Font</h4>
+        <h4>Normal Text/Paragraph Example Font</h4>
+        <p></p>
+        <h4>Colored Callout Example Font</h4>
+        <p></p>
+        <h3>Navigation</h3>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About Us</a>
+            <a href="#">Trips</a>
+            <a href="#">Contact Us</a>
+        </nav>
+        <h2>Wire Frames</h2>
+        <h3>Home Page Wireframe</h3>
+        <img src="https://byui-cse.github.io/wdd130--ww--course/images/wwr/wwr-wireframe-home.png"
+            alt="Home Page Wireframe Example Design" width="700">
+        <h3>About Us Page Wireframe</h3>
+        <img src="https://byui-cse.github.io/wdd130--ww--course/images/wwr/wwr-wireframe-aboutus-update.png"
+            alt="About Us Page Wireframe Design" width="700">
+    </main>
+    <footer>
+        <p>© 2024 ✨Rafting Site Document ✨ Israel Mobote ✨ WDD 130✨</p>
+    </footer>
+</body>
+
 </html>
