my fourth edit on january 3 2024

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,21 +12,21 @@
 
 <body>
     <header>
-        <img src="images/logo.jpg" class="logo" alt="This is the rafting site logo">
+        <img src="images/logo.jpg" alt="This is the rafting site logo">
         <nav>
             <a href="#" target="_blank">Home</a>
             <a href="#" target="_blank">About Us</a>
             <a href="#" target="_blank">Trips</a>
-            <a href="#" target="_blank">Contact Us</a>
+            <a href="https://byupathway.org" target="_blank">Contact Us</a>
         </nav>
     </header>
     <main>
-        <div class="hero">
-            <img src="images/hero-image.jpg" alt="Picture of individuals participating in water rafting ">
+        
+        <div background="images/hero-image.jpg" class="divider">
             <h1>White Water Rafting</h1>
-            <article>
+            <article class="article">
                 <img id="small" src="images/happy-client.png" alt="A Happy Client on a Water Rafter">
-                <p id="special">An smaller img element that portrays a happy client or happy, working employee.
+                <p>An smaller img element that portrays a happy client or happy, working employee.
                     A p element with the company purpose, mission, creed, motto, etc. It is Ok to use non-sense,
                     placeholder language for now.
                     A section element with the following contents:
@@ -51,8 +51,8 @@
                 Do not worry about the layout of the images. Later we will use CSS </p>
         </section>
         <section>
-            <h2 id="Adventure">Adventure Awaits You!</h2>
-            <div>
+            <h2>Adventure Awaits You!</h2>
+            <div class="Adventure">
                 <img src="images/adventure-image1.jpg" alt="">
                 <img src="images/adventure-image2.jpg" alt="">
                 <img src="images/adventure-image3.jpg" alt="">
