my first comment edit on thursday 4 jan 2024

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         
-        <div background="images/hero-image.jpg" class="divider">
+        <div class="divider">
             <h1>White Water Rafting</h1>
             <article class="article">
                 <img id="small" src="images/happy-client.png" alt="A Happy Client on a Water Rafter">
