--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <img src="images/logo.jpg" alt="This is the rafting site logo">
-        <nav>
+        <nav class="nav">
             <a href="#" target="_blank">Home</a>
             <a href="#" target="_blank">About Us</a>
             <a href="#" target="_blank">Trips</a>
