my third commit

--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>WDD 130 | HTML Form - User Poll</title>
+    <title>WDD 130 | HTML and CSS quiz</title>
+    <meta name="description" content="This is my Basic HTML and CSS quiz">
     <meta name="author" content="Israel Mobote">
     <link rel="stylesheet" href="styles/quiz.css">
 </head>
